add create and edit product functiontality
